in progress: 
 - type hints (pyright under vscode)
1.1.2.4 (27/03/2019)
 - FIX: xml output in html wasn't escaped since 1.1.2.1
1.1.2.3 (25/03/2019)
 - FIX: yaml encoding detection (utf8|cp1252)
1.1.2.2 (22/03/2019)
 - FIX: pytest html output status with "MOCK"
1.1.2.1 (22/03/2019)
 - FIX: html output non-encoded non-ascii chars
1.1.2.0 (21/03/2019)
 - new "break" command, to forget following commands in a file
1.1.1.0 (18/03/2019)
 - FIX: save and path break (unresolved param)
 - FIX: resolve param when in a param resolved in body
 - better handle NonPlyable test (coz unresolved params)
 - pytests 98%cov
1.1.0.1 (18/03/2019)
 - FIX: test that foreach section is a list
1.1.0.0 (15/03/2019)
 - better (py)tested (97%cov)
 - unresolved param non break the tests now (html output is created)
 - py38 deprecated warning removed
1.0.1.2 (10/03/2019)
 - expose internal things for the new (py)tests purpose only
1.0.1.1 (08/03/2019)
 - add optionnal doc'string per request, which is displayed in html output
1.0.1.0 (19/02/2019)
 - it's possible to test json str size now !
1.0.0.0 (19/07/2018)
 - first release ;-) no change at all
0.9.9.20 (16/07/2018)
 - fix: when None is present in <,<=,>,>= -> False
0.9.9.19 (16/07/2018)
 - fix: no html response output when http ko
0.9.9.18 (16/07/2018)
 - fix: response timeout None -> response timeout
0.9.9.17 (16/07/2018)
 - fix: response timeout None -> ""
0.9.9.16 (16/07/2018)
  - win patterns
  - save inherits
  - better html display when not callable
  - tests++
  - ★★
0.9.9.15 (15/07/2018)
  - avoid proc to be bad named - "allez la france!!"
0.9.9.14 (15/07/2018)
  - return of dynamic call++
0.9.9.13 (14/07/2018)
  - new yaml feed'er, and foreach in foreach works
  - control keywords (more robust)
0.9.9.12 (14/07/2018)
  - dynamic foreach & more robust (but not foreach in foreach)
0.9.9.11 (14/07/2018)
  - remove params as list -> replaced by foreach
0.9.9.10 (13/07/2018)
  - assert params is a list or a dict : not str !