@@ -1,5 +1,6 @@
 in progress: 
  - type hints (pyright under vscode)
+ - fix: yaml warning without loader
 1.1.2.4 (27/03/2019)
  - FIX: xml output in html wasn't escaped since 1.1.2.1
 1.1.2.3 (25/03/2019)
